--- a/TESTE.HTML
+++ b/TESTE.HTML
@@ -7,6 +7,10 @@
 	<script src="../js/jquery-3.2.1.min.js" type="text/javascript">
 	</script>
 
+	<link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+	<script src="../bootstrap/js/bootstrap.min.js"></script>
+	
 	<!-- LINK PARA O ARQUIVO JAVA SCRIPT DO PROJETO -->
 	<script src="../js/teste.js"></script>
 
