--- a/calcula_consumo.html
+++ b/calcula_consumo.html
@@ -11,12 +11,12 @@
 		var caminhoComGasolina = 480;
 		var consumoGasolina = caminhoComGasolina/tanque;
 
-		document.write("O consumo de gasolina é: " + consumoGasolina);
+		document.write("O consumo de gasolina é: " + consumoGasolina + "km/l");
 
 		var caminhoComAlcool = 30;
 		var consumoComAlcool = caminhoComAlcool/tanque;
 
-		document.write("<br>O consumo de algool é: " + consumoComAlcool);
+		document.write("<br>O consumo de algool é: " + consumoComAlcool + "km/l");
 	</script>
 </body>
 </html>
