--- a/programa.html
+++ b/programa.html
@@ -1,6 +1,32 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<title>programa</title>
+
 	<meta charset="utf-8">
+</head>
+<body>
 
 	<script type="text/javascript">
-		document.write("Idede:");
-		document.write("18");
+		function pulaLinha(){
+			document.write("<br>");
+		}
+		
+		function mostra(frase){
+			document.write(frase);
+			pulaLinha();
+		}
+
+		var ano = 2016;
+
+		mostra("Flavio tem " + (ano - 1977) + "anos");
+
+		mostra("Joaquim tem " + (ano - 1996) + "anos");
+
+		ano = 2017;
+		mostra("Barney tem " + (ano - 1976) + "anos");
+	
 	</script>
+
+</body>
+</html>	
