--- a/calcula_consumo.html
+++ b/calcula_consumo.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>CONSUMO</title>
+
+	<meta charset="utf-8">
 </head>
 <body>
 	<h3>Álcool ou gasolina</h3>
@@ -13,7 +15,7 @@
 
 		document.write("O consumo de gasolina é: " + consumoGasolina + "km/l");
 
-		var caminhoComAlcool = 30;
+		var caminhoComAlcool = 300;
 		var consumoComAlcool = caminhoComAlcool/tanque;
 
 		document.write("<br>O consumo de algool é: " + consumoComAlcool + "km/l");
