--- a/idade_irmao.html
+++ b/idade_irmao.html
@@ -17,8 +17,8 @@
 			pulaLinha();
 		}
 
-		var minhaIdade = 22;
-		var idadeIrmao = 13;
+		var minhaIdade = parseInt(prompt("Entre com a sua idade:"));
+		var idadeIrmao = parseInt(prompt("Entre com a idade do seu irmão"));
 		var diferenca = minhaIdade - idadeIrmao;
 
 		mostra("Nossa diferença de idade é " + diferenca);
