--- a/JavaScript/jogo_adivinha.html
+++ b/JavaScript/jogo_adivinha.html
@@ -7,21 +7,37 @@
 </head>
 <body>
 
+	<input type="" name="">
+	<button>Compare</button>
+
 	<script type="text/javascript">
-		function pulaLinha(){
+		/*function pulaLinha(){
 			document.write("<br>");
 		}
 		
 		function mostra(frase){
 			document.write(frase);
 			pulaLinha();
-		}
+		} 
 
 		function sorteia(numeroAleatorio){
 			return Math.round(Math.random() * numeroAleatorio);
+		}*/
+
+		var segredo = 5;
+		var input = document.querySelector("input");
+		
+		function verifica() {
+			if (input.value == segredo){
+				alert("Você acertou");
+			}else{
+				alert("Você errou");
+			}
 		}
 
-		var numeroPensado = sorteia(10);
+		var button = document.querySelector("button");
+		button.onClick = verifica;
+		/*var numeroPensado = sorteia(10);
 		//var numeroPensado = Math.round(Math.randon()*10); 
 		var chute = parseInt(prompt("Digite seu chute:"));
 		var tentativa = 1;
@@ -39,7 +55,7 @@
 			}
 
 			tentativa++;SS
-		}
+		}*/
 		
 	</script>
 
